--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,8 @@ edition = "2018"
 
 [dependencies]
 rstar = "0.5.1"
+osmpbfreader = "0.13.2"
+osm_boundaries_utils = "0.5.0"
+geojson = { version = "0.16.0", features=["geo-types"] }
+geo-types = "0.4.3"
+serde_json = "1.0.41"
