--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,5 @@ osm_boundaries_utils = "0.5.0"
 geojson = { version = "0.16.0", features=["geo-types"] }
 geo-types = "0.4.3"
 num-traits = "0.2.9"
+rayon = "1.2.0"
+serde_json = "1.0.41"
