--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,12 +6,23 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[[bin]]
+name = "locate"
+path = "src/locate.rs"
+
+[[bin]]
+name = "build-rtree"
+path = "src/build-rtree.rs"
+
 [dependencies]
-rstar = "0.6.0"
+docopt = "1.1.0"
+bincode = "1.1.4"
+rstar = { version = "0.6.0", features=["serde"] }
 osmpbfreader = "0.13.2"
 osm_boundaries_utils = "0.5.0"
 geojson = { version = "0.16.0", features=["geo-types"] }
-geo-types = "0.4.3"
+geo-types = { version = "0.4.3", features=["serde"] }
 rayon = "1.2.0"
+serde = { version = "1.0.102", features = ["derive"] }
 serde_json = "1.0.41"
 geo = "0.12.2"
