--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,10 @@ name = "locate"
 path = "src/locate.rs"
 
 [[bin]]
+name = "bulk"
+path = "src/bulk.rs"
+
+[[bin]]
 name = "build-rtree"
 path = "src/build-rtree.rs"
 
@@ -19,14 +23,15 @@ name = "bench"
 path = "src/bench.rs"
 
 [dependencies]
-clap = "2.33.0"
-bincode = "1.1.4"
-easybench = "1.0.0"
-rstar = { version = "0.6.0", features=["serde"] }
-osmpbfreader = "0.13.2"
-osm_boundaries_utils = "0.5.0"
-geojson = { version = "0.16.0", features=["geo-types"] }
-geo-types = { version = "0.4.3", features=["serde"] }
-serde = { version = "1.0.102", features = ["derive"] }
-serde_json = "1.0.41"
-geo = "0.12.2"
+bincode = "1.1"
+easybench = "1.0"
+rstar = { version = "0.6", features=["serde"] }
+osmpbfreader = "0.14"
+osm_boundaries_utils = "0.7"
+geojson = { version = "0.19", features=["geo-types"] }
+geo-types = { version = "0.6", features=["serde"] }
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+geo = "0.14"
+rayon = "1.3"
+structopt = "0.3"
