--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,10 @@ name = "build-rtree"
 path = "src/build-rtree.rs"
 
 [[bin]]
+name = "service"
+path = "src/service.rs"
+
+[[bin]]
 name = "bench"
 path = "src/bench.rs"
 
@@ -35,3 +39,6 @@ serde_json = "1.0"
 geo = "0.14"
 rayon = "1.3"
 structopt = "0.3"
+actix-web = "3.1"
+env_logger="0.7"
+log="0.4"
