--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,5 +40,8 @@ geo = "0.14"
 rayon = "1.3"
 structopt = "0.3"
 actix-web = "3.1"
-env_logger="0.7"
-log="0.4"
+env_logger = "0.7"
+log = "0.4"
+futures = "0.3"
+actix-utils = "2.0"
+derive_more = "0.99"
