--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,9 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[lib]
+path = "src/lib.rs"
+
 [[bin]]
 name = "locate"
 path = "src/locate.rs"
@@ -39,9 +42,16 @@ serde_json = "1.0"
 geo = "0.14"
 rayon = "1.3"
 structopt = "0.3"
-actix-web = "3.1"
 env_logger = "0.7"
 log = "0.4"
 futures = "0.3"
+actix-web = "3.1"
 actix-utils = "2.0"
+actix-rt = "1.1.1"
 derive_more = "0.99"
+
+[dev-dependencies]
+reqwest = "0.10"
+# tokio = { version = "0.3", features = ["full"] }
+tokio = "0.2"
+lazy_static = "1.4"
