--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "rs-geo-playground"
-version = "0.1.0"
+name = "osm-admin-hierarchies"
+version = "0.2.0"
 authors = ["Magnus Kulke <mkulke@gmail.com>"]
 edition = "2018"
 
