--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,11 +47,15 @@ log = "0.4"
 futures = "0.3"
 actix-web = "3.1"
 actix-utils = "2.0"
-actix-rt = "1.1.1"
 derive_more = "0.99"
+tracing = "0.1"
+tracing-log = "0.1"
+tracing-subscriber = "0.2"
+tracing-bunyan-formatter = "0.1"
+tracing-actix-web = "0.2"
 
 [dev-dependencies]
+actix-rt = "1.1.1"
 reqwest = "0.10"
-# tokio = { version = "0.3", features = ["full"] }
 tokio = "0.2"
 lazy_static = "1.4"
