--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,10 @@ path = "src/service.rs"
 name = "bench"
 path = "src/bench.rs"
 
+[[bin]]
+name = "mgns"
+path = "src/mgns.rs"
+
 [dependencies]
 bincode = "1.1"
 easybench = "1.0"
@@ -53,9 +57,16 @@ tracing-log = "0.1"
 tracing-subscriber = "0.2"
 tracing-bunyan-formatter = "0.1"
 tracing-actix-web = "0.2"
+tracing-opentelemetry = "0.11"
+opentelemetry = { version = "0.12", default-features = false, features = ["trace", "metrics"] }
+opentelemetry-jaeger = "0.11"
+opentelemetry-prometheus = "0.5"
+prometheus = "0.11"
+actix-web-opentelemetry = { version = "0.10", features = ["metrics"] }
+actix-service = "1.0"
+tokio = { version = "0.2", default-features = false, features = ["rt-core", "blocking", "time", "stream"] }
 
 [dev-dependencies]
 actix-rt = "1.1.1"
 reqwest = "0.10"
-tokio = "0.2"
 lazy_static = "1.4"
