--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "osm-admin-hierarchies"
-version = "0.2.0"
+name = "osm-admin-lookup"
+version = "0.3.0"
 authors = ["Magnus Kulke <mkulke@gmail.com>"]
 edition = "2018"
 
@@ -22,49 +22,31 @@ name = "build-rtree"
 path = "src/build-rtree.rs"
 
 [[bin]]
-name = "service"
-path = "src/service.rs"
-
-[[bin]]
-name = "bench"
-path = "src/bench.rs"
+name = "admin-lookup"
+path = "src/server.rs"
 
 [dependencies]
-bincode = "1.1"
-easybench = "1.0"
+actix-web = "4"
+bincode = "1"
+easybench = "1"
 rstar = { version = "0.6", features=["serde"] }
 osmpbfreader = "0.14"
 osm_boundaries_utils = "0.7"
 geojson = { version = "0.19", features=["geo-types"] }
 geo-types = { version = "0.6", features=["serde"] }
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
+serde = { version = "1", features = ["derive"] }
+serde_json = "1"
 geo = "0.14"
 rayon = "1.3"
 structopt = "0.3"
-env_logger = "0.7"
-log = "0.4"
-futures = "0.3"
-actix-web = "3.3"
-actix-utils = "2.0"
-derive_more = "0.99"
+tokio = { version = "1", features = ["full"] }
 tracing = "0.1"
-tracing-log = "0.1"
-tracing-subscriber = "0.2"
-tracing-bunyan-formatter = "0.1"
-tracing-actix-web = "0.2"
-tracing-opentelemetry = "0.11"
-opentelemetry = { version = "0.12", default-features = false, features = ["trace", "metrics"] }
-opentelemetry-jaeger = "0.11"
-opentelemetry-prometheus = "0.5"
-prometheus = "0.11"
-actix-web-opentelemetry = { version = "0.10", features = ["metrics"] }
-actix-service = "1.0"
-tokio = { version = "0.2", default-features = false, features = ["rt-core", "blocking", "time", "stream", "macros"] }
-reqwest = "0.10"
-actix-rt = "1.1"
-
-[dev-dependencies]
+tracing-actix-web = "0.5"
+tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
+tracing-bunyan-formatter = "0.3"
+prometheus = "0.13"
+futures-util = "0.3"
+time = "0.3"
 lazy_static = "1.4"
 
 # Enable for cargo flamegraph
